Optimise image caching